--- a/www/styles.css
+++ b/www/styles.css
@@ -163,3 +163,23 @@ animation-timing-function: ease-out;
 @keyframes fadeIn {
   to { opacity: 1; }
 }
+
+#modal-loading-screen {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 999; /* Lower z-index so it appears below modal */
+  text-align: center;
+}
+
+#modal-loading-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 2em;
+}
